# infra-advisor-ai

./: .env.example  .gitignore  .pages.yml  CLAUDE.md  Makefile  README.md  claude-progress.txt  docker-compose.yml
.claude/: settings.json
.claude/agents/: datadog-agent.md  frontend-agent.md  infra-agent.md  reviewer.md  security-audit.md  test-agent.md
.github/workflows/: build-push.yml  ci.yml  docs.yml
datadog/: datadog-agent.yaml
datadog/dashboards/: blob-storage.json  infra-overview.json  llm-observability.json  mcp-server.json  pipeline-health.json
datadog/monitors/: faithfulness-score.json  kafka-consumer-lag.json  mcp-external-api-error.json
datadog/synthetics/: consultant-query-flow.json
docs/: .env.example  Gemfile  _config.yml  astro.config.mjs  index.md  package-lock.json  package.json  resource-group-migration.md  tsconfig.json
docs/_data/: contact.yml  share.yml
docs/_tabs/: about.md  architecture.md  data-pipeline.md  deployment.md  development.md  observability.md  services.md
docs/agent-guides/: build-test-verify.md  core-conventions.md  project-map.md
docs/architecture/: data-flow.md  index.md  infrastructure.md  overview.md
docs/data-pipeline/: eia-refresh.md  fema-refresh.md  index.md  knowledge-base-init.md  nbi-refresh.md  twdb-refresh.md
docs/deployment/: index.md  kubernetes.md  prerequisites.md  quickstart.md
docs/development/: conventions.md  index.md  local-setup.md  testing.md
docs/observability/: apm.md  dashboards.md  index.md  llm-observability.md  rum.md
docs/scripts/: check-links.js  fetch-trace.js
docs/services/: agent-api-dotnet.md  agent-api.md  auth-api.md  index.md  load-generator.md  mcp-server-dotnet.md  mcp-server.md  ui.md
docs/src/components/: Head.astro  Mermaid.astro  TraceViewer.jsx
docs/src/styles/: brand.css
experiments/dotnet-maf-poc/: .env.example  InfraAdvisor.MafPoc.csproj  Program.cs  README.md
experiments/dotnet-otel-poc/: .env.example  InfraAdvisor.OtelPoc.csproj  Program.cs  README.md
experiments/dotnet-otel-poc-autoinstr/: .dockerignore  .env.example  Dockerfile  InfraAdvisor.OtelPoc.AutoInstr.csproj  Program.cs  README.md  docker-compose.yml  entrypoint.sh
experiments/otel-collector/: config.yaml  docker-compose.yml
infra/bicep/: main.bicep
k8s/: namespace.yaml
k8s/agent-api/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/agent-api-dotnet/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/airflow/: values.yaml
k8s/auth-api/: configmap.yaml  deployment.yaml  service.yaml
k8s/datadog/: clusteragent.yaml  daemonset.yaml  rbac.yaml
k8s/ddot-collector/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/kafka/: kafka-topics.yaml  strimzi-kafka-cluster.yaml
k8s/load-generator/: configmap.yaml  cronjob.yaml
k8s/mailhog/: deployment.yaml  service.yaml
k8s/mailpit/: configmap.yaml  deployment.yaml  service.yaml
k8s/mcp-server/: configmap.yaml  deployment.yaml  service.yaml
k8s/mcp-server-dotnet/: configmap.yaml  deployment.yaml  service.yaml
k8s/postgres/: dbm-setup.sql  deployment.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  setup-dbm.sh
k8s/redis/: deployment.yaml  networkpolicy.yaml  service.yaml
k8s/secrets/: agent-api-dotnet-secret.yaml  agent-api-secret.yaml  auth-api-secret.yaml  ghcr-pull-secret.yaml  load-generator-secret.yaml  mcp-server-dotnet-secret.yaml  mcp-server-secret.yaml  postgres-secret.yaml  redis-secret.yaml
k8s/ui/: deployment.yaml  ingress.yaml  service.yaml
services/agent-api/: Dockerfile  pyproject.toml
services/agent-api-dotnet/: Dockerfile  InfraAdvisor.AgentApi.csproj  Program.cs
services/agent-api/src/: agent.py  auth.py  conversations.py  kafka_consumer.py  main.py  memory.py
services/agent-api/src/observability/: ai_guard.py  llm_obs.py  tracing.py
services/agent-api/tests/: test_agent_integration.py  test_memory.py
services/auth-api/: Dockerfile  pyproject.toml
services/auth-api/src/: auth.py  database.py  main.py
services/auth-api/tests/: test_password_reset.py
services/ingestion/: pyproject.toml
services/ingestion/dags/: _dd_blob.py  _dd_logging.py  census_market_intelligence_refresh.py  eia_refresh.py  fema_refresh.py  knowledge_base_init.py  nbi_refresh.py  public_docs_ingestion.py  samgov_awards_refresh.py  sitecustomize.py  spark_feature_engineering.py  twdb_water_plan_refresh.py
services/ingestion/scripts/: fetch_public_docs.py  generate_synthetic_docs.py
services/ingestion/tests/: test_fema_refresh.py  test_fetch_public_docs.py  test_nbi_refresh.py  test_twdb_water_plan_refresh.py
services/load-generator/: Dockerfile  pyproject.toml
services/load-generator/src/: main.py
services/load-generator/src/corpus/: adversarial.yaml  edge_cases.yaml  happy_path.yaml
services/mcp-server/: Dockerfile  pyproject.toml
services/mcp-server-dotnet/: Dockerfile  InfraAdvisor.McpServer.csproj  Program.cs
services/mcp-server/src/: main.py
services/mcp-server/src/observability/: metrics.py  tracing.py
services/mcp-server/src/templates/: cost_estimate_scaffold.md.j2  funding_positioning_memo.md.j2  risk_summary.md.j2  scope_of_work.md.j2
services/mcp-server/src/tools/: bridge_condition.py  contract_awards.py  disaster_history.py  draft_document.py  energy_infrastructure.py  ercot_energy.py  procurement_opportunities.py  project_knowledge.py  txdot_open_data.py  water_infrastructure.py  web_procurement_search.py
services/mcp-server/tests/: test_bridge_condition.py  test_contract_awards.py  test_disaster_history.py  test_draft_document.py  test_procurement_opportunities.py  test_project_knowledge.py  test_tracing.py  test_water_infrastructure.py  test_web_procurement_search.py
services/ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
specs/: infraadvisor-prd.md
tasks/: todo.md
(+156 files in other folders)
