[project]
name = "agent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ddtrace[openai,langchain]>=2.9",
    "fastapi>=0.111",
    "httpx>=0.27",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-mcp-adapters>=0.1",
    "openai>=1.30",
    "pydantic>=2.7",
    "redis>=5.0",
    "uvicorn[standard]>=0.30",
    "confluent-kafka>=2.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
