[project]
name = "agent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # ddtrace 4.x bundles all integrations — no separate extras needed
    "ddtrace>=4.7.1",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-mcp-adapters>=0.2.0",
    "openai>=2.32.0",
    "pydantic>=2.13.0",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.44.0",
    "confluent-kafka>=2.14.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
