[project]
name = "infra-advisor-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0",
    "apache-airflow-providers-http>=6.0.0",
    # DJM: Datadog Transport requires >= 2.7.3; openlineage-python >= 1.37.0
    "apache-airflow-providers-openlineage>=2.7.3",
    "openlineage-python>=1.37.0",
    "azure-storage-blob>=12.28.0",
    "azure-search-documents>=11.6.0",
    "azure-identity>=1.25.3",
    "tiktoken>=0.12.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "openai>=2.32.0",
    # ddtrace 4.x bundles all integrations — no separate extras needed
    "ddtrace>=4.7.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
