[project]
name = "infratools-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # >=1.27.0 for latest FastMCP features; server functionality is in the base package
    # (the [server] extra was removed in mcp 1.x — ddtrace MCP auto-instrumentation requires >=1.10.0)
    "mcp>=1.27.0",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.0",
    "azure-search-documents>=11.6.0",
    "azure-identity>=1.25.3",
    "jinja2>=3.1.6",
    # ddtrace 4.x bundles all integrations including mcp — no separate extras needed
    "ddtrace>=4.7.1",
    "datadog-api-client>=2.53.0",
    "openai>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
